2004-11-12  Nick Roberts  <nickrob@snap.net.nz>

	* tooltip.el (require): Explain why CL is needed.

2004-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/iso-cvt.el (iso-cvt-define-menu): Fix typo.

	* tooltip.el: Require CL.

	* emacs-lisp/bytecomp.el: Use push.
	(byte-compile-file-form-defalias): Rename from byte-compile-defalias.
	(defalias): Remove the `byte-compile' property and add
	a `byte-hunk-handler'.

2004-11-11  Juri Linkov  <juri@jurta.org>

	* info.el (Info-search): Save match data for isearch.
	Skip Tag Table node.

	* descr-text.el (describe-char): Replace syntax-after with code
	from its previous version.

	* files.el (magic-mode-alist): Use optimization for SGML mode too.
	(set-auto-mode): Doc fix.  Remove unused variable `xml'.

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Remove > after <html to allow HTML attributes.

2004-11-11  Jay Belanger  <belanger@truman.edu>

	* calc/calc-comb.el (math-prime-factors-finished):  Declare it as
	a variable.
	(calcFunc-dfac):  Replace unbound max by n.
	(math-stirling-local-cache):  New variable.
	(math-stirling-number, math-stirling-1, math-stirling-2):
	Replace the variable `cache' by the declared variable
	math-stirling-local-cache.
	(var-RandSeed):  Declare it as a variable.
	(math-init-random-base, math-random-digit):  Don't check to see if
	var-RandSeed is bound.
	(math-random-cache, math-gaussian-cache, calc-verbose-nextprime):
	Declare them instead of just setting them.
	(math-init-random-base):  Made i a local variable.
	(math-random-digit):  Made math-random-last a local variable.
	(math-prime-test-cache):  Move declaration to before it is used.
	(math-prime-test-cache-k, math-prime-test-cache-q)
	(math-prime-test-cache-nm1, math-prime-factors-finished):
	Declare them as variables.

2004-11-11  Jay Belanger  <belanger@truman.edu>

	* calc/calc-ext.el (math-defcache):  Use defvar for the new
	variables it creates.

2004-11-11  Lars Hansen  <larsh@math.ku.dk>
