@@ -2,6 +2,15 @@
 
 	* tooltip.el (require): Explain why CL is needed.
 
+2004-11-11  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* printing.el: Insert :version into defgroup (printing).  All reference
+	to Files option in menubar were changed to File.
+	(pr-version): New version number (6.8.2).
+	(pr-get-symbol): Call easy-menu-intern.
+	(pr-region-active-p): Now is a fun (it was defsubst).  To avoid
+	compilation gripes.
+
 2004-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* international/iso-cvt.el (iso-cvt-define-menu): Fix typo.
